[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasta"
version = "0.1.0"
description = "Linear ship response statistics from complex RAOs and wave spectra"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "rasta contributors" }]
dependencies = [
  "numpy>=1.24",
  "xarray>=2023.10",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
